--- a/package.json
+++ b/package.json
@@ -10,18 +10,27 @@
     "start": "webpack-dev-server --mode development --open",
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
-    "test": "mocha src/**/*.test.js"
+    "test": "mocha --require @babel/register --require test/helpers/browser.js src/**/*.test.js"
   },
   "devDependencies": {
+    "@babel/cli": "^7.10.5",
+    "@babel/core": "^7.10.5",
+    "@babel/node": "^7.10.5",
+    "@babel/preset-env": "^7.10.4",
+    "babel-loader": "^8.1.0",
     "chai": "^4.2.0",
     "css-loader": "^3.4.2",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "jsdom": "^16.3.0",
     "mocha": "^8.0.1",
+    "nodemon": "^2.0.4",
     "pug": "^2.0.4",
     "pug-loader": "^2.4.0",
+    "rewire": "^5.0.0",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
+    "sinon": "^9.0.2",
     "style-loader": "^1.1.3",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
