--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
     "sinon": "^9.0.2",
+    "sinon-chai": "^3.5.0",
     "style-loader": "^1.1.3",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
