--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
+  },
+  "dependencies": {
+    "material-icons": "^0.3.1"
   }
 }
